acvus-mir-test/tests/snapshots/all__e2e__error_variable_write_type_mismatch.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: result.unwrap_err()
---
[infer:test] [2..30] type mismatch: expected i64, got String
