acvus-mir-test/tests/snapshots/all__e2e__extern_fn_object_return.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   assign <template> = T0
     4 |   r1 = call #0(1 (r2)) [r3 -> r4]
     5 |   assign u = r1
     6 |   r5 = take u.name
     7 |   r6 = ref &mut <template>
     8 |   append r6 r5
     9 |   r7 = take <template>
    10 |   return r7 [r4]

    ; orders: what the body's yielded Order waits for
    ;   call@4 #0 <- r3(entry)

    ; r0 (v14) : Order
    ; r1 (get_user(...)) : {age: i64, name: String}
    ; r2 (v5) : i64
    ; r3 (v1) : Order
    ; r4 (v8) : Order
    ; r5 (u.name) : String
    ; r6 (<template>.) : &mut String
    ; r7 (v12) : String
    ; r8 (v7) : Order
    ; r9 (v3) : String
    ; r10 (v13) : Order
    ; r11 (u) : {age: i64, name: String}
    ; r12 (<template>) : String
