acvus-mir-test/tests/snapshots/all__e2e__field_access_on_destructured.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @pair
     2 |   assign @pair = r1
     3 |   r2 = ref &@pair
     4 | L2:
     6 |   r3 = ref &(*r2)[0]
     7 |   if true (r4) -> L3 else L4 join L5
     8 | L3:
    10 |   jump L5(true (r5))
    11 | L4:
    13 |   jump L5(false (r6))
    14 | L5(r7: Bool):
    15 |   jump_if r7 then L6 else L1
    16 | L6:
    17 |   r8 = ref &(*r2)[0]
    18 |   r9 = take (*r8).name
    19 |   r10 = string_concat [r9]
    20 |   jump L0(r10, r8)
    21 | L1:
    23 |   jump L0(T0, r0)
    24 | L0(r11: String, r12: &{name: String}):
    25 |   r13 = string_concat [r11]
    26 |   r14 = take @pair
    27 |   commit @pair = r14
    28 |   return r13

    ; r0 (v18) : &{name: String}
    ; r1 (@pair) : ({name: String}, i64)
    ; r2 (@pair.) : &({name: String}, i64)
    ; r3 ((*r3).[0]) : &{name: String}
    ; r4 (v4) : Bool
    ; r5 (v7) : Bool
    ; r6 (v8) : Bool
    ; r7 (v6) : Bool
    ; r8 (obj) : &{name: String}
    ; r9 ((*r11).name) : String
    ; r10 (v13) : String
    ; r11 (v15) : String
    ; r12 (v20) : &{name: String}
    ; r13 (v16) : String
    ; r14 (v17) : ({name: String}, i64)
    ; r15 (v11) : &{name: String}
    ; r16 (v14) : String
    ; r17 (@pair) : ({name: String}, i64)
    ; r18 (obj) : &{name: String}
    ; r19 (v19) : &{name: String}
