acvus-mir-test/tests/snapshots/all__e2e__field_store_then_load_passes.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   r1 = object {x: 0 (r0)}
     2 |   assign @a = r1
     4 |   assign @a.y = 1 (r2)
     5 |   r3 = ref &@a.y
     6 |   r4 = call #0(r3)
     7 |   r5 = take @a
     8 |   commit @a = r5
     9 |   return r4

    ; r0 (v3) : i64
    ; r1 (v4) : {x: i64, y: i64}
    ; r2 (v5) : i64
    ; r3 (@a.y) : &i64
    ; r4 (to_string(...)) : String
    ; r5 (v8) : {x: i64, y: i64}
    ; r6 (@a) : {x: i64, y: i64}
