acvus-mir-test/tests/snapshots/all__e2e__lambda_chained_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @users
     5 |   assign <template> = T0
     6 |   r4 = array_begin capacity=0
     7 |   r5 = call #0(r4)
     8 |   r6 = call #1(r3)
     9 |   r7 = closure L0 []
    10 |   r8 = call #2(r6, r7)
    11 |   r9 = const_str T1
    12 |   r10 = call #3(r9)
    13 |   r11 = call #4(r8, r10)
    14 |   r12 = ref &mut <template>
    15 |   append r12 r11
    16 |   r13 = take <template>
    17 |   commit @users = r5
    18 |   return r13

    ; r0 (v21) : Vec<{address: {city: String}}>
    ; r1 (v22) : Vec<{address: {city: String}}>
    ; r2 (v23) : Map<Items<{address: {city: String}}>, {address: {city: String}}, String, Pure>
    ; r3 (@users) : Vec<{address: {city: String}}>
    ; r4 (v7) : Array<{address: {city: String}}, 0>
    ; r5 (vec(...)) : Vec<{address: {city: String}}>
    ; r6 (into_iter(...)) : Items<{address: {city: String}}>
    ; r7 (v11) : Fn({address: {city: String}}) -> String
    ; r8 (map(...)) : Map<Items<{address: {city: String}}>, {address: {city: String}}, String, Pure>
    ; r9 (v15) : &str
    ; r10 (to_string(...)) : String
    ; r11 (join(...)) : String
    ; r12 (<template>.) : &mut String
    ; r13 (v19) : String
    ; r14 (v3) : String
    ; r15 (x) : Map<Items<{address: {city: String}}>, {address: {city: String}}, String, Pure>
    ; r16 (users) : Vec<{address: {city: String}}>
    ; r17 (v20) : Vec<{address: {city: String}}>
    ; r18 (users) : Vec<{address: {city: String}}>
    ; r19 (<template>) : String
    ; r20 (x) : Map<Items<{address: {city: String}}>, {address: {city: String}}, String, Pure>
    ; r21 (@users) : Vec<{address: {city: String}}>
    ; r22 (@users) : Vec<{address: {city: String}}>

=== closure L0 (ValueId(0)) ===
     0 |   assign u = r0
     1 |   r1 = take u.address.city
     2 |   return r1

    ; r0 (v1) : {address: {city: String}}
    ; r1 (u.address.city) : String
    ; r2 (u) : {address: {city: String}}
