acvus-mir-test/tests/snapshots/all__e2e__lambda_float_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1194
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @vals
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   assign x = r8
    13 |   r9 = ref &x
    14 |   r10 = call #4(r9)
    15 |   assign out = r10
    17 |   r11 = ref &out
    18 |   r12 = call #5(r11)
    19 |   r13 = string_concat [T0, T0, T0, T0, r12]
    20 |   commit @vals = r4
    21 |   return r13

    ; r0 (v24) : Vec<Float>
    ; r1 (v25) : Vec<Float>
    ; r2 (@vals) : Vec<Float>
    ; r3 (v6) : Array<Float, 0>
    ; r4 (vec(...)) : Vec<Float>
    ; r5 (into_iter(...)) : Iterator<Float, Pure>
    ; r6 (v11) : Fn(Float) -> Float
    ; r7 (map(...)) : Iterator<Float, Pure>
    ; r8 (collect(...)) : Vec<Float>
    ; r9 (x.) : &Vec<Float>
    ; r10 (len(...)) : u64
    ; r11 (out.) : &u64
    ; r12 (to_string(...)) : String
    ; r13 (v22) : String
    ; r14 (@vals) : Vec<Float>
    ; r15 (x) : Vec<Float>
    ; r16 (vals) : Vec<Float>
    ; r17 (v15) : String
    ; r18 (vals) : Vec<Float>
    ; r19 (out) : u64
    ; r20 (@vals) : Vec<Float>
    ; r21 (v23) : Vec<Float>
    ; r22 (v5) : String
    ; r23 (v8) : String
    ; r24 (v19) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 * 2.0 (r3)
     3 |   return r1

    ; r0 (v6) : Float
    ; r1 (v5) : Float
    ; r2 (v1) : Float
    ; r3 (v4) : Float
    ; r4 (v) : Float
    ; r5 (v) : Float
